--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ header.dark {
     --color-on-background: white;
     --color-background-hover: #27262c;
     --color-on-background-hover: white;
-    --color-primary: #C1aeeb;
+    --color-primary: #8C68C4;
     --color-primary-disabled: #1f213c;
     --color-on-primary: white;
     --color-error: #de0000;
