--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
     --color-on-background: black;
     --color-background-hover: #eee;
     --color-on-background-hover: black;
-    --color-primary: #A7C7E7;
+    --color-primary: #5B96D2;
     --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
